[gd_scene load_steps=29 format=3 uid="uid://q50i3baf4m16"]

[ext_resource type="Script" uid="uid://dt11m8uqkhywf" path="res://scene/main/main.gd" id="1_6vuhr"]
[ext_resource type="Script" uid="uid://d2lmeual4shs2" path="res://scene/main/head.gd" id="1_am8c5"]
[ext_resource type="Script" uid="uid://jr8ued7y0uke" path="res://scene/main/elements_grid.gd" id="2_0imob"]
[ext_resource type="Script" uid="uid://lrcisyy44xpd" path="res://scene/main/tool_bar.gd" id="3_b8g54"]
[ext_resource type="Texture2D" uid="uid://btb52speaijb2" path="res://texture/mouse.svg" id="3_siuy0"]
[ext_resource type="Script" uid="uid://m1335q84qhuo" path="res://scene/main/property_set.gd" id="4_a0c6e"]
[ext_resource type="Script" uid="uid://djpfe761pk5xt" path="res://scene/main/element_node_list.gd" id="4_qtsyf"]
[ext_resource type="Texture2D" uid="uid://bxf7t84k0coew" path="res://texture/move.svg" id="5_onf7c"]
[ext_resource type="Texture2D" uid="uid://y2di32ko63qx" path="res://texture/Build.svg" id="6_si3g0"]
[ext_resource type="Texture2D" uid="uid://brp1hx2ovgx8c" path="res://texture/transparent.png" id="10_pidc3"]
[ext_resource type="Script" uid="uid://bqpy8o68lgcb3" path="res://scene/main/tail.gd" id="11_36wa8"]
[ext_resource type="Texture2D" uid="uid://rqbgn3x0uk3r" path="res://texture/save.svg" id="12_n5o2v"]
[ext_resource type="Texture2D" uid="uid://cfwj64yaxmd00" path="res://texture/undo.svg" id="13_n5o2v"]
[ext_resource type="Texture2D" uid="uid://ctm3eg26u2755" path="res://texture/redo.svg" id="14_ruc3j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nakj2"]
bg_color = Color(0.97604996, 0.97604996, 0.97604984, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_am8c5"]
bg_color = Color(0.11372549, 0.13333334, 0.16078432, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b8g54"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_si3g0"]
bg_color = Color(0.50653094, 0.6145935, 0.713419, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pidc3"]
bg_color = Color(0.55276805, 0.60667014, 0.670317, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0imob"]
bg_color = Color(0.1918605, 0.22008659, 0.2596054, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[sub_resource type="SVGTexture" id="SVGTexture_am8c5"]

[sub_resource type="SVGTexture" id="SVGTexture_a0c6e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snrr3"]
bg_color = Color(0.13399903, 0.15588968, 0.18653697, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6712784, 0.67127854, 0.67127824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36wa8"]
bg_color = Color(0.1882353, 0.21568628, 0.2627451, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_snrr3"]
texture = ExtResource("10_pidc3")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vuhr"]
bg_color = Color(0.11372549, 0.13333334, 0.16078432, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ruc3j"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
corner_detail = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ortbh"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0, 0.6745098, 0.94117653, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
corner_detail = 2

[node name="Control" type="Panel" node_paths=PackedStringArray("inspectoscope", "property_list", "elements", "element_node_list", "tool_bar", "tail", "main_scene")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nakj2")
script = ExtResource("1_6vuhr")
inspectoscope = NodePath("Body/SplitContainer/Right/PropertySet")
property_list = NodePath("Body/SplitContainer/Right/PropertySet/VBoxContainer")
elements = NodePath("Body/SplitContainer/SplitContainer/ElementList/GridContainer")
element_node_list = NodePath("Body/SplitContainer/SplitContainer/ElementNodeList/VBoxContainer")
tool_bar = NodePath("Head/ToolBar")
tail = NodePath("Tail")
main_scene = NodePath("Body/SplitContainer/Right/Centre/Control")

[node name="Head" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_am8c5")
script = ExtResource("1_am8c5")

[node name="HBoxContainer" type="HBoxContainer" parent="Head"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 5.0
offset_right = -1549.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="Project" type="Button" parent="Head/HBoxContainer"]
layout_mode = 2
tooltip_text = "项目设置"
text = "项目"

[node name="ToolBar" type="HBoxContainer" parent="Head"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -20.0
offset_right = -12.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 16
script = ExtResource("3_b8g54")

[node name="Select" type="Button" parent="Head/ToolBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "选择"
theme_override_styles/normal = SubResource("StyleBoxFlat_b8g54")
theme_override_styles/pressed = SubResource("StyleBoxFlat_si3g0")
theme_override_styles/hover = SubResource("StyleBoxFlat_pidc3")
icon = ExtResource("3_siuy0")
expand_icon = true

[node name="Move" type="Button" parent="Head/ToolBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "移动"
theme_override_styles/normal = SubResource("StyleBoxFlat_b8g54")
theme_override_styles/pressed = SubResource("StyleBoxFlat_si3g0")
theme_override_styles/hover = SubResource("StyleBoxFlat_pidc3")
icon = ExtResource("5_onf7c")
expand_icon = true

[node name="Build" type="Button" parent="Head/ToolBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
tooltip_text = "Build 脚本"
theme_override_styles/normal = SubResource("StyleBoxFlat_b8g54")
theme_override_styles/pressed = SubResource("StyleBoxFlat_si3g0")
theme_override_styles/hover = SubResource("StyleBoxFlat_pidc3")
icon = ExtResource("6_si3g0")
expand_icon = true

[node name="Body" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 59.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0imob")
script = ExtResource("1_am8c5")

[node name="SplitContainer" type="SplitContainer" parent="Body"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
theme_override_icons/h_grabber = SubResource("SVGTexture_am8c5")

[node name="SplitContainer" type="SplitContainer" parent="Body/SplitContainer"]
layout_mode = 2
theme_override_constants/separation = 4
theme_override_icons/v_grabber = SubResource("SVGTexture_a0c6e")
vertical = true

[node name="ElementList" type="ScrollContainer" parent="Body/SplitContainer/SplitContainer"]
custom_minimum_size = Vector2(350, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_snrr3")
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Body/SplitContainer/SplitContainer/ElementList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 14
theme_override_constants/v_separation = 14
columns = 2
script = ExtResource("2_0imob")

[node name="ElementNodeList" type="ScrollContainer" parent="Body/SplitContainer/SplitContainer"]
custom_minimum_size = Vector2(350, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_snrr3")
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Body/SplitContainer/SplitContainer/ElementNodeList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("4_qtsyf")

[node name="Right" type="SplitContainer" parent="Body/SplitContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 4
theme_override_icons/h_grabber = SubResource("SVGTexture_am8c5")

[node name="PropertySet" type="ScrollContainer" parent="Body/SplitContainer/Right"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_36wa8")
script = ExtResource("4_a0c6e")

[node name="VBoxContainer" type="VBoxContainer" parent="Body/SplitContainer/Right/PropertySet"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Centre" type="Panel" parent="Body/SplitContainer/Right"]
clip_contents = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_snrr3")

[node name="Control" type="Control" parent="Body/SplitContainer/Right/Centre"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Tail" type="Panel" parent="." node_paths=PackedStringArray("progress_bar")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -57.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_6vuhr")
script = ExtResource("11_36wa8")
progress_bar = NodePath("HBoxContainer/ProgressBar")

[node name="HBoxContainer" type="HBoxContainer" parent="Tail"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_right = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="Save" type="Button" parent="Tail/HBoxContainer"]
custom_minimum_size = Vector2(57, 0)
layout_mode = 2
icon = ExtResource("12_n5o2v")
expand_icon = true

[node name="Undo" type="Button" parent="Tail/HBoxContainer"]
custom_minimum_size = Vector2(57, 0)
layout_mode = 2
icon = ExtResource("13_n5o2v")
expand_icon = true

[node name="Redo" type="Button" parent="Tail/HBoxContainer"]
custom_minimum_size = Vector2(57, 0)
layout_mode = 2
icon = ExtResource("14_ruc3j")
expand_icon = true

[node name="ProgressBar" type="ProgressBar" parent="Tail/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_ruc3j")
theme_override_styles/fill = SubResource("StyleBoxFlat_ortbh")
value = 50.0

[connection signal="pressed" from="Head/HBoxContainer/Project" to="Head" method="_on_project_pressed"]
[connection signal="pressed" from="Head/ToolBar/Select" to="Head/ToolBar" method="_on_select_pressed"]
[connection signal="pressed" from="Head/ToolBar/Move" to="Head/ToolBar" method="_on_move_pressed"]
[connection signal="pressed" from="Head/ToolBar/Build" to="Head/ToolBar" method="_on_build_pressed"]
[connection signal="pressed" from="Tail/HBoxContainer/Save" to="Tail" method="_on_save_pressed"]
[connection signal="pressed" from="Tail/HBoxContainer/Undo" to="Tail" method="_on_undo_pressed"]
[connection signal="pressed" from="Tail/HBoxContainer/Redo" to="Tail" method="_on_redo_pressed"]
